# Evolutionary-algorithm-for-hyperparameter-optimization-population-based

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: demo.ipynb  generate_data.py  plot_history.py  run_classification.py  run_regression.py
pbt_xgb/: README.md  __init__.py  member.py  pbt.py  scoring.py  search_space.py
tests/: test_coverage.py  test_evolution.py  test_pbt.py  test_plot.py  test_regression.py  test_scoring.py  test_search_space.py
