[project]
name = "evolutionary-hyperparam-optimization"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy==2.5.0",
    "pandas==3.0.3",
    "scikit-learn==1.9.0",
    "xgboost==3.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "matplotlib>=3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pbt_xgb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=pbt_xgb --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
branch = true
source = ["pbt_xgb"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E731"]  # allow lambda assignments in tests
